thimble/apps/landingpage/static/landingpage/css/beta.css
html {
	font-size: 14px;
}

.container-fluid {
	min-height: 100vh;
	background: rgba(131, 131, 131, 0.50);
}

.logo-wrapper {
	width: 2rem;
	position: absolute;
	top: 1rem;
	right: 1rem;
}

.title-wrapper {
	margin-top: 8rem;
	margin-left: auto;
	margin-right: auto;
}

.title {
	font-size: 6rem;
	font: 'Lato', sans-serif;
	font-weight: 100;
	color: white;
	text-transform: uppercase;
	text-align: center;
}

.desc-wrapper {
	margin-left: auto;
	margin-right: auto;
	max-width: 750px;
	padding-left: 20px;
	padding-right: 20px;
}

.desc {
	font-size: 1rem;
	font: 'Lato', sans-serif;
	font-weight: 300;
	color: white;
	text-transform: uppercase;
	text-align: center;
}

.invite-wrapper {
	margin-left: auto;
	margin-right: auto;
	max-width: 500px;
	padding-left: 20px;
	padding-right: 20px;
}

.invite {
	font-size: 1rem;
	font: 'Lato', sans-serif;
	font-weight: 300;
	color: white;
	text-align: center;
}

form {
	margin-top: 20px;
	margin-bottom: 20px;
	text-align: center;
}

.email {
	font-size: 1rem;
	margin-right: 20px;
	height: 30px;
	border-radius: 4px;
	border: none;
	padding-left: 10px;
}

.btn {
	font-size: 1rem;
	height: 30px;
	margin-left: 20px;
	padding: 1px 10px 1px 10px;
	background: #95A5A6;
}

hr {
	width: 50px;
}

@media(max-width:767px){
	html {
		font-size: 12px;
	}
	.email {
		height: 20px;
		margin-right: 10px;
	}
	.btn {
		height: 20px;	
		margin-left: 10px;
	}
}
@media(min-width:768px){
	html {
		font-size: 14px;
	}
}
@media(min-width:992px){
	html {
		font-size: 14px;
	}
}
@media(min-width:1200px){
	html {
		font-size: 18px;
	}
}

